SELESAI MODUL ACTIVITY

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kotlin_72190345">
         <activity
+            android:name=".HelpActivity"
+            android:exported="true"
+            android:label="Help Activity"/>
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="Main Activity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
