--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.kotlin_72190345">
+    package="com.example.kotlin_72190345" >
 
     <application
         android:allowBackup="true"
@@ -8,16 +8,37 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Kotlin_72190345">
+        android:theme="@style/Theme.Kotlin_72190345" >
+        <activity
+            android:name=".DutaTani"
+            android:exported="true"
+            android:label="@string/title_activity_duta_tani" />
+        <activity
+            android:name=".ProteinTrackerActivity"
+            android:exported="true"
+            android:theme="@style/BlueBlood"/>
+        <activity
+            android:name=".TableActivity"
+            android:exported="true"
+            android:theme="@style/BlueBlood"/>
+        <activity
+            android:name=".ConstraintActivity"
+            android:exported="true"
+            android:theme="@style/BlueBlood"/>
+        <activity
+            android:name=".LinearActivity"
+            android:exported="true"
+            android:theme="@style/BlueBlood"/>
         <activity
             android:name=".HelpActivity"
             android:exported="true"
-            android:label="Help Activity"/>
+            android:label="Help Activity"
+            android:theme="@style/BlueBlood"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Main Activity">
-
+            android:label="Main Activity"
+            android:theme="@style/BlueBlood">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
