--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.kotlin_72190345" >
+    package="com.example.kotlin_72190345">
 
     <application
         android:allowBackup="true"
@@ -8,18 +8,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Kotlin_72190345" >
+        android:theme="@style/Theme.Kotlin_72190345">
+        <activity
+            android:name=".SampleRecyclerView"
+            android:exported="true" />
         <activity
             android:name=".CustomListView"
             android:exported="true" />
         <activity
             android:name=".DaftarLahanPetaniListView"
             android:exported="true"
-            android:label="Daftar Lahan Petani"/>
+            android:label="Daftar Lahan Petani" />
         <activity
             android:name=".SampleListView"
             android:exported="true"
-            android:theme="@style/BlueBlood"/>
+            android:theme="@style/BlueBlood" />
         <activity
             android:name=".SampleList"
             android:exported="true"
