--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kotlin_72190345">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,13 +12,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kotlin_72190345">
         <activity
+            android:name=".GetAPIActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ServiceActivity"
+            android:exported="true"
+            android:theme="@style/BlueBlood">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".SampleCardView"
             android:exported="true"
-            android:theme="@style/BlueBlood"/>
+            android:theme="@style/BlueBlood" />
         <activity
             android:name=".SampleRecyclerView"
             android:exported="true"
-            android:theme="@style/BlueBlood"/>
+            android:theme="@style/BlueBlood" />
         <activity
             android:name=".CustomListView"
             android:exported="true" />
@@ -31,13 +46,7 @@
         <activity
             android:name=".SampleList"
             android:exported="true"
-            android:theme="@style/BlueBlood">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/BlueBlood" />
         <activity
             android:name=".DutaTani"
             android:exported="true"
