--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kotlin_72190345">
         <activity
+            android:name=".GetPetaniActivity"
+            android:exported="true"
+            android:theme="@style/BlueBlood">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity
             android:name=".GetAPIActivity"
             android:exported="true" />
         <activity
             android:name=".ServiceActivity"
             android:exported="true"
-            android:theme="@style/BlueBlood">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/BlueBlood"/>
         <activity
             android:name=".SampleCardView"
             android:exported="true"
